fix the links and the indices on the charts on the safety crisis blog

--- a/app/views/templates/austin_safety_crisis.html
+++ b/app/views/templates/austin_safety_crisis.html
@@ -31,6 +31,7 @@
        <div id="links">
         <div><a href="/pedestrian_crash_map/">See Map of Pedestrian Injuries and Fatalities</a></div><br>
         <div><a href="/bike_crash_map/">See Map of Bicycle Injuries and Fatalities</a></div><br>
+        <div><a href="/micromobility_crash_map/">See Map of Micromobility Injuries and Fatalities</a></div><br>
         <div><a href="https://visionzero.austin.gov/viewer/">City Vision Zero Viewer</a></div><br>
         <div><a href="https://data.austintexas.gov/Transportation-and-Mobility/Austin-Crash-Report-Data-Crash-Level-Records/y2wy-tgr5/about_data">Original Source - Austin Open Data Portal</a></div>
     </div>
@@ -81,6 +82,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -143,6 +145,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -205,6 +208,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -267,6 +271,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -329,6 +334,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -391,6 +397,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -452,6 +459,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -514,6 +522,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -576,6 +585,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -638,6 +648,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -701,6 +712,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
@@ -763,6 +775,7 @@ async function refreshCharts() {
                     scales: {
                         yAxes: [{
                             ticks: {
+                                suggestedMin: 0,
                                 // Include a dollar sign in the ticks
                                 callback: function(value, index, ticks) {
                                     return (
