--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script defer src="https://us.umami.is/script.js" data-website-id="6dd84301-7d06-4d0c-ab93-f14ee931461f"></script>
    
 </head>
 <body><div id="root"></div>
