add mastodon verification

--- a/app/views/templates/home.html
+++ b/app/views/templates/home.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <script defer src="https://us.umami.is/script.js" data-website-id="6dd84301-7d06-4d0c-ab93-f14ee931461f"></script>
-   
+   <link rel="me" href="https://its.bencarneiro.com/@ben">
 </head>
 <body><div id="root"></div>
     {% if debug %}
